--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   cupertino_icons: any
   google_fonts: any
   google_sign_in: ^7.2.0
+  shared_preferences: any
   flutter_localizations:
     sdk: flutter
 
