--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,42 +32,42 @@ dependencies:
     sdk: flutter
 
   # UI & State Management
-  flutter_riverpod: any
-  hooks_riverpod: any
+  flutter_riverpod: ^2.6.1
+  hooks_riverpod: ^2.6.1
 
   # Routing
-  go_router: any
+  go_router: ^16.2.4
 
   # Database
-  isar: any
-  isar_flutter_libs: any
-  path_provider: any
-  image_picker: any
-  path: any
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.5
+  image_picker: ^1.2.0
+  path: ^1.9.1
 
   # Firebase
-  firebase_core: any
-  firebase_auth: any
-  cloud_firestore: any
-  firebase_storage: any
-  firebase_messaging: any
-  firebase_remote_config: any
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
+  cloud_firestore: ^6.0.2
+  firebase_storage: ^13.0.2
+  firebase_messaging: ^16.0.2
+  firebase_remote_config: ^6.0.2
 
   # Utilities
-  intl: any
-  collection: any
-  uuid: any
-  image: any
-  flutter_heatmap_calendar: any
-  flutter_local_notifications: any
-  timezone: any
-  animations: any
-  flutter_staggered_animations: any
+  intl: ^0.19.0
+  collection: ^1.19.1
+  uuid: ^4.5.1
+  image: ^4.5.4
+  flutter_heatmap_calendar: ^1.0.5
+  flutter_local_notifications: ^19.4.2
+  timezone: ^0.10.1
+  animations: ^2.0.11
+  flutter_staggered_animations: ^1.1.1
 
-  cupertino_icons: any
-  google_fonts: any
+  cupertino_icons: ^1.0.8
+  google_fonts: ^6.3.2
   google_sign_in: ^7.2.0
-  shared_preferences: any
+  shared_preferences: ^2.5.3
   flutter_localizations:
     sdk: flutter
 
@@ -76,10 +76,10 @@ dev_dependencies:
     sdk: flutter
 
   # Code Generation
-  build_runner: any
-  isar_generator: any
+  build_runner: ^2.4.13
+  isar_generator: ^3.1.0+1
 
-  flutter_lints: any
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
